  EntityTableColumnPanel refactored from EntityTableSearchPanel and EntityTableSummaryPanel
  EntityUiUtil.createEastButtonPanel() added
  EntityUtil.activeDependencies() removed
  EntityEditPanel.createControlPanel() renamed to createPropertyPanel()
  EntityComboBoxModel.include(Entity) renamed to includeEntity
  FilteredComboBoxModel refactored, filterContents() added, different handling of nullValueString, uses Collator when sorting
  EntityComboBoxModel.foreignKeyFilterEntities and foreignKeyFilterCriteria fields added
  EntityComboBoxModel.get/setForeignKeyFilterEntities() and createForeignKeyFilterComboBoxModel() added
  EntityComboBox.createForeignKeyFilterComboBox() added
  EntityTableColumnPanel.setVerticalFillerWidth() added
  Property.columnName field added
  framework/db package classes changed according to the above
  Configuration now reads most settings from system properties
  Configuration.FILTER_QUERY_BY_MASTER removed
  Configuration.INITIAL_SEARCH_PANEL_STATE renamed to DEFAULT_SEARCH_PANEL_STATE
  common.db.SimpleCriteria added
  EntityTablePanel.getAutoResizeMode() added for overriding
  common.model.ValueMap added
  Entity now implements ValueMap
  common.model.ValueMap.StringProvider added
  domain.Entity.StringProvider added
  EntityDefinition.stringProvider field+setter+getter added
  EntityRepository.getStringProvider() added
  Entity.Proxy.toString() changed according to the above
  Entity.hasValue() renamed to containsValue()
  EntityDbConnectionPool.collectStatistics field added
  Configuration.getBooleanValue() added, used throughout
  Property.format field added
  EntityTableCellRenderer changed according to the above
  EntityDefinition.selectQuery field added
  EntityRepository.getSelectQuery() added
  EntityDbConnection.selectMany(), selectPropertyValues() and selectRowCount() changed to take the above into account
  EntityDbConnectionTest improved
  ProfilingModel/Panel improvements
  ServerMonitor improvements